--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.6",
+    "@clerk/nextjs": "^4.31.6",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,9 +22,9 @@
     "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1",
-    "next": "14.1.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
+    "next": "^14.2.17",
     "next-cloudinary": "^5.20.0",
     "qs": "^6.11.2",
     "react": "^18",
